# deutil

./: .gitignore  CONTRIBUTING.md  README.md  md2pdf.py  pyproject.toml  pytest.ini  requirements.txt
deutil/: __main__.py  convert.py  countermodel.py  expr.py  fol_cm.py  proof.py  rules.py  termutils.py  truthtables.py
md2pdf/: __main__.py  expr.py  proof.py  rules.py
tests/: conftest.py  test_arbitrary_term_types.py  test_complex.py  test_countermodels.py  test_proof_bad_symbolic_terms.py  test_proof_error_cases.py  test_proof_success_cases.py  test_truthtables.py
