[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "deutil"
version = "0.0.1"
description = "Tools for working with DeLancy-style proofs in first-order logic and propositional logic"
dependencies = [
    "weasyprint",
    "markdown",
    "types-Markdown",
    "beautifulsoup4",
    "frozendict",
]
readme = "README.md"
authors = [
    { name = "Max Cutlyp", email = "max@maxcutlyp.com" },
]
requires-python = ">=3.12"
license = "GPL-3.0-or-later"

[project.urls]
GitHub = "https://github.com/maxcutlyp/deutil"

[project.scripts]
deutil = "deutil.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "mypy>=1.20.1",
]

[tool.pytest]
markers = [
    "slow: marks tests as slow (deselected by default; use '--run-slow' to include)",
    "veryslow: marks tests as very slow (deselected by default; use '--run-very-slow' to include)",
]

